Size change to images to fix clipping

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -35,6 +35,6 @@
     }
 
     @media only screen and (max-width: 1466px) {
-        background-size: 1459px 777px !important;
+        background-size: 1459px 799px !important;
     }
 }
